tests/fixtures/invalid/divmod_int_none.py
# Cannot call divmod() with Int, None
x = divmod(1, None)
